src/objects/Language__c.object
<CustomObject>
    <description>A relation of a particular language to a contact record to reflect fluency and where said language is spoken</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact speaking the language in question</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Languages</relationshipLabel>
        <relationshipName>Languages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fluency__c</fullName>
        <description>measures the fluency of the language spoken. EdFi specifically calls out &quot;Limited/Not Limited&quot; so those are provided here.</description>
        <label>Fluency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Not Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the language is the primary language</description>
        <label>Primary Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Where_Spoken__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account representing the household, or school/program/organization where this language is being used</description>
        <label>Where Spoken</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Languages</relationshipLabel>
        <relationshipName>Languages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Language</label>
    <nameField>
        <label>Language Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Languages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>